[package]
name = "blink-host"
version = "0.1.0"
edition = "2021"
default-run = "blink-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = { version = "4.2.0", default-features = false }
blink-proto = { path = "../blink-proto", features = ["std"] }
anyhow = "1.0.66"

