[package]
name = "blink-proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = "0.3.2"
heapless = "0.7.16"
postcard = "1.0.2"
serde = { version = "1.0.147", features = ["derive"], default-features = false }

[features]
std = []
