[package]
authors = ["Michael Kefeder"]
edition = "2021"
readme = "README.md"
name = "rp2040-rtic-usb-serial-blinky"
version = "0.1.0"
resolver = "2"

[dependencies]
cortex-m = "0.7.7"
rtic = { version = "2.0.0-alpha.1", features = ["thumbv6-backend"]}
rtic-monotonics = { version = "1.0.0-alpha.2", features = ["rp2040"]}
embedded-hal = { version = "0.2.7", features = ["unproven"] }

defmt = "0.3.2"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }

# We're using a Pico by default on this template
rp-pico = "0.7.0"
usb-device = "0.2.9"
usbd-serial = "0.1.1"
rp2040-hal = "0.8.0"

blink-proto = { path = "../blink-proto" }
heapless = "0.7.16"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
